Fix layout issues on mobile

--- a/main.css
+++ b/main.css
@@ -37,6 +37,8 @@ body {
 	color: #FFFFFF;
 	font-weight: lighter;
 	font-size: 45px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .clear {
@@ -106,7 +108,7 @@ body {
 	position: fixed;
 	bottom: 10px;
 	text-align: center;
-	width: 1000px;
+	width: 100%;
 }
 
 #footer-text {
@@ -161,5 +163,26 @@ body {
 		font-size: 45px;
 		margin-right: 10px;
 		margin-top: 20px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	body {
+		height: 650px;
+	}
+	#footer {
+		position: relative;
+		bottom: 25px;
+		text-align: center;
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 350px) {
+	#download {
+		margin-right: 10px;
+	}
+	#buttons {
+		width: 315px;
 	}
 }
